--- a/jdbc_1/src/jdbc.properties
+++ b/jdbc_1/src/jdbc.properties
@@ -1,4 +1,4 @@
 user=root
 password=135790
-url=jdbc:mysql://localhost:3306/test
+url=jdbc:mysql://localhost:3306/test?useUnicode=true&amp;characterEncoding=utf-8
 driverClass=com.mysql.jdbc.Driver
